<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FoodieCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeonsung"
        android:text="@string/foodie_cart"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/SignUpHeretextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bolditalic"
        android:text="@string/sign_up_here_for_your_n_admin_dashboard"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/FoodieCart"
        app:layout_constraintStart_toStartOf="@id/FoodieCart"
        app:layout_constraintTop_toBottomOf="@id/FoodieCart" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/yeonsung"
        android:text="@string/choose_your_location"
        android:textColor="@color/textcolor"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout"
        app:layout_constraintStart_toStartOf="@id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittextshape"
        android:elevation="2dp"
        android:fontFamily="@font/lato_regular"
        android:outlineSpotShadowColor="@color/textcolor"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/arrow_down"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUpHeretextview">

        <AutoCompleteTextView
            android:id="@+id/listofLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/lato_regular"
            android:inputType="none"
            android:text="@string/choose_location" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@id/nameOwner"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/usernew"
        android:drawablePadding="15dp"
        android:elevation="2dp"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/name_of_owner"
        android:inputType="textEmailAddress"
        android:outlineSpotShadowColor="@color/textcolor"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout"
        app:layout_constraintStart_toStartOf="@id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <EditText
        android:id="@+id/restaurantName"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/home"
        android:drawablePadding="15dp"
        android:elevation="2dp"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/name_of_restaurant"
        android:inputType="text"
        android:outlineSpotShadowColor="@color/textcolor"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@id/nameOwner"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@id/nameOwner"
        app:layout_constraintTop_toBottomOf="@id/nameOwner" />


    <EditText
        android:id="@+id/emailOrPhone"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="15dp"
        android:elevation="2dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/email_or_phone_number"
        android:outlineSpotShadowColor="@color/textcolor"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@id/restaurantName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/restaurantName"
        app:layout_constraintTop_toBottomOf="@id/restaurantName" />

    <EditText
        android:id="@id/password"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="2dp"
        android:inputType="textPassword"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/password"
        android:outlineSpotShadowColor="@color/textcolor"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/emailOrPhone"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/emailOrPhone"
        app:layout_constraintTop_toBottomOf="@+id/emailOrPhone" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createUserButton"
        android:layout_width="125dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/greenbuttonshape"
        android:fontFamily="@font/protestriot_regular"
        android:outlineSpotShadowColor="@color/textcolor"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/FoodieCart"
        app:layout_constraintStart_toStartOf="@+id/FoodieCart"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/alreadyHaveAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/protestriot_regular"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        app:layout_constraintEnd_toEndOf="@id/createUserButton"
        app:layout_constraintStart_toStartOf="@id/createUserButton"
        app:layout_constraintTop_toBottomOf="@id/createUserButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/yeonsung"
        android:text="@string/design_by_n_vaibhav_tormal"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/alreadyHaveAccountButton"
        app:layout_constraintStart_toStartOf="@+id/alreadyHaveAccountButton" />

    <!-- <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:text="Design By\n Vaibhav Tormal"
         android:textSize="16sp"
         android:textAlignment="center"
         android:fontFamily="@font/yeonsung"
         android:textColor="@color/textcolor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" /> -->


</androidx.constraintlayout.widget.ConstraintLayout>